WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262160
Fix TextStream dumping of Objective-C types
https://bugs.webkit.org/show_bug.cgi?id=262160
Summary
Fix TextStream dumping of Objective-C types
Simon Fraser (smfr)
Reported
2023-09-26 18:36:26 PDT
Dumping a Class hits the operator<<(NSArray *) which is wrong.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-26 18:36:49 PDT
<
rdar://problem/116094853
>
Simon Fraser (smfr)
Comment 2
2023-09-26 18:43:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18258
EWS
Comment 3
2023-11-02 10:43:45 PDT
Committed
270118@main
(71add0ad8094): <
https://commits.webkit.org/270118@main
> Reviewed commits have been landed. Closing PR #18258 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug